--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.1",
+    "@types/node": "^14.14.31",
     "chai": "^4.3.0",
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.0.31",
-    "hardhat": "^2.0.10"
+    "hardhat": "^2.0.10",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.5"
   }
 }
