--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@symfoni/hardhat-react": "^0.1.14",
+    "@typechain/ethers-v5": "^5.0.0",
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.31",
@@ -10,7 +12,14 @@
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.0.31",
     "hardhat": "^2.0.10",
+    "hardhat-deploy": "^0.7.0-beta.45",
+    "hardhat-deploy-ethers": "^0.3.0-beta.7",
+    "hardhat-typechain": "^0.3.5",
+    "prettier": "2.2.1",
+    "ts-generator": "^0.1.1",
+    "ts-morph": "^9.1.0",
     "ts-node": "^9.1.1",
+    "typechain": "^4.0.0",
     "typescript": "^4.1.5"
   }
 }
