--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,10 @@
 {
   "root": true,
+  "env": {
+    "browser": true,
+    "node": true,
+    "mocha": true
+  },
   "parser": "@typescript-eslint/parser", // Specifies the ESLint parser
   "extends": [
     "eslint:recommended",
