--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "start": "next start",
     "compile": "hardhat compile",
     "test": "hardhat test",
-    "hardhat": "hardhat"
+    "hardhat": "hardhat",
+    "deploy": "hardhat run --network localhost scripts/deploy.js"
   },
   "dependencies": {
     "@web3-react/core": "^6.1.9",
