--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "editor.formatOnSave": true,
-  "solidity.compileUsingRemoteVersion": "0.7.3"
+  "solidity.compileUsingRemoteVersion": "soljson-v0.7.6+commit.7338295f"
 }
