--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hardhat-deploy": "^0.7.0-beta.45",
     "hardhat-deploy-ethers": "^0.3.0-beta.7",
     "hardhat-typechain": "^0.3.5",
+    "mvp.css": "^1.6.3",
     "prettier": "2.2.1",
     "ts-generator": "^0.1.1",
     "ts-morph": "^9.1.0",
