Fix everything and README

--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -14,13 +14,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.js",
-    "**/*.jsx",
-    "**/*.json"
-  ],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.js", "**/*.json"],
+  "files": ["./hardhat.config.ts", "./addresses.json"]
 }
