--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "save-the-whale-token",
-  "dependencies": {
-    "next": "^10.0.7",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
+  "name": "@private/tinac-nft-contracts",
+  "private": true,
+  "main": "./index.ts",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -13,23 +10,13 @@
     "@types/chai": "^4.2.15",
     "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.31",
-    "@types/react": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^2.34.0",
     "chai": "^4.3.0",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "ethereum-waffle": "^3.2.2",
     "ethers": "^5.0.31",
     "hardhat": "^2.0.10",
     "hardhat-deploy": "^0.7.0-beta.45",
     "hardhat-deploy-ethers": "^0.3.0-beta.7",
     "hardhat-typechain": "^0.3.5",
-    "mvp.css": "^1.6.3",
     "prettier": "2.2.1",
     "ts-generator": "^0.1.1",
     "ts-morph": "^9.1.0",
@@ -39,10 +26,6 @@
   },
   "scripts": {
     "format": "prettier --write .",
-    "lint": "eslint .",
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
     "compile": "hardhat compile",
     "test": "hardhat test",
     "node": "hardhat node",
