--- a/storefront/package.json
+++ b/storefront/package.json
@@ -6,7 +6,8 @@
     "next": "^10.0.7",
     "next-transpile-modules": "^6.3.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
