--- a/storefront/package.json
+++ b/storefront/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@private/tinac-nft-contracts": "../contracts",
+    "d3-color": "^2.0.0",
     "next": "^10.0.7",
     "next-transpile-modules": "^6.3.0",
     "react": "^17.0.1",
@@ -10,6 +11,7 @@
     "react-hook-form": "^6.15.4"
   },
   "devDependencies": {
+    "@types/d3-color": "^2.0.1",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
