--- a/storefront/package.json
+++ b/storefront/package.json
@@ -7,6 +7,7 @@
     "next": "^10.0.7",
     "next-transpile-modules": "^6.3.0",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4"
   },
@@ -14,6 +15,7 @@
     "@types/d3-color": "^2.0.1",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
+    "@types/react-color": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^2.34.0",
     "eslint": "^7.20.0",
