--- a/storefront/package.json
+++ b/storefront/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@private/contracts": "../contracts",
+    "d3": "^6.5.0",
     "d3-color": "^2.0.0",
     "ethers": "^5.0.31",
     "next": "^10.0.7",
@@ -13,6 +14,7 @@
     "react-hook-form": "^6.15.4"
   },
   "devDependencies": {
+    "@types/d3": "^6.3.0",
     "@types/d3-color": "^2.0.1",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
