--- a/contracts/package.json
+++ b/contracts/package.json
@@ -32,5 +32,8 @@
     "node": "hardhat node",
     "hardhat": "hardhat --network localhost",
     "deploy": "hardhat run --network localhost scripts/deploy.js"
+  },
+  "dependencies": {
+    "@ethersproject/bignumber": "^5.0.14"
   }
 }
