--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -1,16 +1,16 @@
 specVersion: 0.0.2
 description: Generic ERC721 Subgraph (Transfers, Metadata)
-repository: https://github.com/schmidsi/generic-erc721-subgraph
+repository: https://github.com/xecutors/nft-playground
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
-    name: Hashmasks # Change me
-    network: mainnet
+    name: NFT-Playground # Change me
+    network: rinkeby
     source:
-      address: '0xC2C747E0F7004F9E8817Db2ca4997657a7746928' # Change me
-      abi: ERC721
-      startBlock: 11743743 # Change me
+      address: '0xDb7641D1C8da37796081365d6880Cec43aB50b25' # Change me
+      abi: LissajousToken
+      startBlock: 8244360 # Change me
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
@@ -21,8 +21,8 @@ dataSources:
         - Contract
         - Transfer
       abis:
-        - name: ERC721
-          file: ./abis/ERC721.json
+        - name: LissajousToken
+          file: ../contracts/artifacts/contracts/LissajousToken.sol/LissajousToken.json
       eventHandlers:
         - event: Transfer(indexed address,indexed address,indexed uint256)
           handler: handleTransfer
