--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -15,5 +15,10 @@
     "jsx": "preserve"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.js", "**/*.json"],
-  "files": ["./hardhat.config.ts", "./addresses.json"]
+  "files": [
+    "./hardhat.config.ts",
+    "./addresses.json",
+    "./test/compareSimulation.ts",
+    "./test/bigNumberCompoundInterest.ts"
+  ]
 }
