--- a/storefront/package.json
+++ b/storefront/package.json
@@ -12,7 +12,8 @@
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^6.15.4"
+    "react-hook-form": "^6.15.4",
+    "react-markdown": "^5.0.3"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
