--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -14,12 +14,5 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.js", "**/*.json"],
-  "files": [
-    "./test/expectBigNumberEqual.ts",
-    "./hardhat.config.ts",
-    "./addresses.json",
-    "./test/compareSimulation.ts",
-    "./test/bigNumberCompoundInterest.ts"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.js", "**/*.json"]
 }
