--- a/contracts/.gitignore
+++ b/contracts/.gitignore
@@ -3,7 +3,9 @@ node_modules
 
 #Hardhat files
 cache
-artifacts
+artifacts/@openzeppelin
+artifacts/build-info
+artifacts/contracts
 generated
 
 .env
