--- a/storefront/package.json
+++ b/storefront/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "@ethersproject/bignumber": "^5.0.15",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.0.9",
     "@private/contracts": "../contracts",
     "d3": "^6.5.0",
     "d3-color": "^2.0.0",
@@ -12,8 +14,7 @@
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^6.15.4",
-    "react-markdown": "^5.0.3"
+    "react-hook-form": "^6.15.4"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
