--- a/storefront/package.json
+++ b/storefront/package.json
@@ -11,6 +11,7 @@
     "ethers": "^5.0.31",
     "next": "^10.0.7",
     "next-transpile-modules": "^6.3.0",
+    "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
