--- a/storefront/package.json
+++ b/storefront/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/d3": "^6.3.0",
     "@types/d3-color": "^2.0.1",
+    "@types/jsdom": "^16.2.7",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
@@ -29,6 +30,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jsdom": "^16.5.1",
     "mvp.css": "^1.6.3",
     "prettier": "2.2.1",
     "typescript": "^4.1.5"
