--- a/storefront/package.json
+++ b/storefront/package.json
@@ -14,7 +14,8 @@
     "qrcode.react": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^6.15.4"
+    "react-hook-form": "^6.15.4",
+    "svg2png": "^4.1.1"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
